--- a/TenderInfo/Views/Account/TableInfoMaterial.cshtml
+++ b/TenderInfo/Views/Account/TableInfoMaterial.cshtml
@@ -121,7 +121,8 @@
         var columns = [
             [
                 {
-                    title: '序号',
+                    //title: '序号',
+                    title: '',
                     rowspan: 2,
                     colspan: 1,
                     valign: "middle",
